# monad

./: .bazelrc  .clang-tidy  .dockerignore  .gitignore  .gitmodules  AGENTS.md  BUILD  CLAUDE.md  CMakeLists.txt  Jenkinsfile  MODULE.bazel  README.md  SECURITY.md  Stein loves mon  TEST_BRANCH.md  compile-and-fuzz.sh  configure  creditOnlySkipRetryExample.md  dbarch.tex  dbsummary2.md  find_affected_node.py  generalSummary.md  generate_transformation_list.py  json_to_binary_preimage.py  monad.bzl  mpt.py  nodes.py  peek.py  retryExample.md  riscv64-embedded-custom-newlib.nix  riscv64-none-elf.nix  run_monad.sh  shell.nix  siblings.py  to_string.cpp  to_string_uint64.cpp  transform.py  updateMonadCoqAsts.sh  update_trie.py
ansible/: Makefile  (+6 more)
category/statedb/: CMakeLists.txt  kv_store.cpp  kv_store.hpp  schema.hpp  statedb.cpp  statedb.hpp  test_kv_store.cpp  test_trie_node_store.cpp  trie_node_store.cpp  trie_node_store.hpp
category/zkvm/: BUILD  CMakeLists.txt
category/zkvm/src/: libc.cpp  precompiles_impl.cpp
cmd/: CMakeLists.txt  block_inspector.cpp  cli_tool_impl.cpp  eventcap.cpp  exportrsm.cpp  exportshm.cpp  monad.cpp  monad_cli.cpp  replay_ethereum.cpp  rsm-util.cpp  snapshot-rsm.cpp
cmd/monad/: event.cpp  event.hpp  event_init.cpp  event_init.hpp  main.cpp  revert_transaction_generator.cpp  revert_transaction_generator.hpp  rocksdb_seed.cpp  runloop_ethereum.cpp  runloop_ethereum.hpp  runloop_monad.cpp  runloop_monad.hpp  runloop_monad_ethblocks.cpp  runloop_monad_ethblocks.hpp  wal.cpp  wal.hpp  wal_reader.cpp
cmd/test/: CMakeLists.txt  cli_tool_test.cpp
cmd/vm/mce/: CMakeLists.txt  mce.cpp
cmd/vm/mce/scripts/: schema.sql  to_csv.py
cmd/vm/mce/src/: instrumentable_compiler.hpp  instrumentable_vm.hpp  operands_logger.cpp  operands_logger.hpp
libs/event/: CMakeLists.txt
libs/event/src/python/: cg-events  event.py  event_ctypes.py
monadproofs/: dune  dune-project
monadproofs/EVMOpSem/: block.v
monadproofs/fmai/: LICENSE  dunebb
monadproofs/fmai/driver/elisp/: coqprogrammer.el  ltac2driver.el  uptream.el
monadproofs/fmai/driver/ltac2/: dune-gen.sh  gcd.cpp  gcd_cpp_proof.v  print.v
monadproofs/fmai/prompts/: coding.md  concurrentRep.md  dune  main.md  md_to_v.py  rwlockTask.md  sep.md  specs.md  specsMisc.md
monadproofs/proofs/: bigauto.v  dbspecs.v  dbspecs.v.md  evmmisc.v  evmopsem.v  exec_specs.v  libspecs.v  main.v  misc.v  modlem.v  prelude.v  printer.v  reservebal.v  reservebal.v.md  stsg.v
monadproofs/proofs/execproofs/: blockstate.v  blockstate.v.md  comm.md  compute_senders.v  exec_transaction.v  exec_transactions.v  llmagentexp.v  llmagentexp.v.md
monadproofs/tutorials/: atomic_specs.v  demo.cpp  demo2.cpp  demo2prf.v  demo3prf.v  demo3prf2.v  demomisc.v  demoprf.v
rocq/uint256/: .dir-locals.el  .gitignore  AGENTS.md  CLAUDE.md  Remaining256CoveragePlan.org  ShiftRightNotes.org  _CoqProject  dune-project  dune-rocq-top  uint256.opam
rocq/uint256/docs/: barrett-cpp-correspondence.org  barrett-modeling-deviations.org  barrett-proof-adjustments.org  barrett-proof-obligations.org  barrett-review-guide.org  barrett-semantic-discrepancies.org
rocq/uint256/theories/: Addition.v  Arithmetic.v  ArithmeticProofs.v  Barrett.v  BarrettExecutableChecks.v  BarrettProofs.v  BarrettReviewWitnesses.v  BarrettStaticChecks.v  Base.v  ConstexprMul.v  Division.v  DivisionProofs.v  Primitives.v  RuntimeMul.v  RuntimeMulProofs.v  Spec.v  Stack.v  Uint.v  UintSigma.v  UintZ.v  Words.v  WordsLemmas.v  dune
rust/: Cargo.toml
rust/.cargo/: config.toml
rust/crates/monad-build/: Cargo.toml
rust/crates/monad-build/src/: bindgen.rs  cmake.rs  cxx.rs  lib.rs
rust/crates/monad-cxx/: build.rs
rust/crates/monad-ethcall/: Cargo.toml  build.rs
rust/crates/monad-ethcall/src/: ffi.rs  lib.rs
rust/crates/monad-event-ring/: build.rs
rust/crates/monad-event-ring/src/: path.rs
rust/crates/monad-exec-events/: Cargo.toml
rust/crates/monad-exec-events/src/: block.rs  ffi.rs
rust/crates/monad-statesync/src/: ffi.rs
rust/crates/monad-triedb/: .gitignore  CMakeLists.txt  Cargo.toml  build.rs
rust/crates/monad-triedb/benches/: triedb_api.rs
rust/crates/monad-triedb/examples/: monad-triedb-cli.rs
rust/crates/monad-tx-envelope/: Cargo.toml
rust/crates/tinyvm-ffi/: Cargo.toml
test/compatibility/: CMakeLists.txt  compatibility.cpp  compatibility.py  from_json.hpp
test/ethereum_test/: CMakeLists.txt  README.md
test/ethereum_test/exclude/: MONAD_NEXT.cmake  MONAD_NEXT_amsterdam.cmake  berlin.cmake  byzantium.cmake  cancun.cmake  constantinoplefix.cmake  eip150.cmake  eip158.cmake  frontier.cmake  homestead.cmake  istanbul.cmake  london.cmake  merge+1153.cmake  merge.cmake  osaka.cmake  prague.cmake  shanghai.cmake
test/ethereum_test/include/: blockchain_spec_test.hpp  blockchain_test.hpp  ethereum_spec_test.hpp  ethereum_test.hpp  monad_spec_test.hpp  revision_map.hpp  spec_test_utils.hpp  tracking_block_hash_buffer.hpp  transaction_test.hpp
test/ethereum_test/src/: blockchain_spec_test.cpp  blockchain_test.cpp  ethereum_spec_test.cpp  ethereum_test.cpp  general_state_test.cpp  main.cpp  monad_spec_test.cpp  spec_test_utils.cpp  transaction_test.cpp
test/statetest/: CMakeLists.txt  statetest.cpp  statetest.hpp  statetest_loader.cpp  statetest_logs_hash.cpp
test/utils/: CMakeLists.txt  db_parity_harness.cpp  db_parity_harness.hpp  from_json.cpp  from_json.hpp  json_state.cpp  json_state.hpp  test_db_parity_harness.cpp  test_db_rocksdb_parity.cpp  test_state.hpp
test/vm/monadml_evm/: CMakeLists.txt  monadml_evm.hpp
test/witness_fuzzer/: CMakeLists.txt  fuzzer.cpp
tmpsrc/: CMakeLists.txt  README  bootstrap.cmake
tmpsrc/cmd/: CMakeLists.txt  monad.cpp
zkvm/build-support/: Cargo.toml
zkvm/build-support/src/: lib.rs
zkvm/guest/: CMakeLists.txt  execute_block_zkvm.cpp  execute_block_zkvm.hpp  ffi.cpp  x86_test_runner.cpp
zkvm/sp1/: Cargo.toml
zkvm/sp1/program/: main.c
zkvm/sp1/script/: Cargo.toml  build.rs
zkvm/sp1/sdk/: README.md  zkvm.ld
zkvm/zisk/: Cargo.toml  align.ld  build.rs
zkvm/zisk/src/: main.rs
(+1570 files in other folders)
