(include_subdirs qualified)
(coq.theory
 (name monad)                           ; logical path of this library
 (theories
  Lens Lens.Elpi Equations Equations.Prop Equations.Type
  bluerock iris stdpp elpi ExtLib Ltac2 AAC_tactics
  bluerock.ltac2.llm)
 (coqdoc_flags (--utf8))
)

(subdir tutorials
 (include dune.inc))
