[workspace]
resolver = "2"
members = ["crates/*"]

[profile.release]
debug = true
lto = "thin"
panic = "abort"

[workspace.dependencies]
monad-cxx = { path = "./crates/monad-cxx" }
monad-event-ring = { path = "./crates/monad-event-ring" }
monad-exec-events = { path = "./crates/monad-exec-events" }

alloy-consensus = "0.8"
alloy-eips = "0.8"
alloy-primitives = "=0.8.18"
alloy-rpc-types = "0.8"
bindgen = "0.71.1"
cc = "1.2.27"
chrono = "0.4.34"
clap = "4.2"
cmake = "0.1"
criterion = { version = "0.4", features = ["html_reports"] }
hex = "0.4"
itertools = "0.10"
libc = "0.2.153"
ratatui = "0.29.0"
serde = "1.0"
serde_json = "1.0"
strum = "0.26.3"
tracing = "0.1"
zstd = "0.13"
